# Python

./: .gitignore  README.md  index.html  mylog.txt  pyproject.toml
scr/: masks.py  processing.py  widget.py
src/: counter.py  decorators.py  external_api.py  generators.py  main.py  masks.py  mylog.txt  processing.py  search_operations.py  transactions_csv.py  transactions_csv_xlxs.py  transactions_excel.py  utils.py  widget.py
tests/: conftest.py  test_counter.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_search_operations.py  test_transactions_csv.py  test_transactions_excel.py  test_utils.py  test_widget.py
